dwmlssp/log0802.txt
Inicio dos testes
  File "dwp1.py", line 768
    P = I.P
          ^
IndentationError: unindent does not match any outer indentation level
Testes finalizados, compactando...
compactado, enviando e-mail...
Finalizado

Inicio dos testes
  File "dwp2.py", line 768
    P = I.P
          ^
IndentationError: unindent does not match any outer indentation level
Testes finalizados, compactando...
compactado, enviando e-mail...
Finalizado

Inicio dos testes
  File "dwp3.py", line 768
    P = I.P
          ^
IndentationError: unindent does not match any outer indentation level
Testes finalizados, compactando...
compactado, enviando e-mail...
Finalizado

Inicio dos testes
  File "dwp4.py", line 768
    P = I.P
          ^
IndentationError: unindent does not match any outer indentation level
Testes finalizados, compactando...
compactado, enviando e-mail...
Finalizado

